# Plataforma-Stewart-ESP

./: .gitignore  CMakeLists.txt  Kinematic_Robot.py  README.md  calibra.py  calibra_vision.py  comunication.py  joy_control.py  stick_test_V2.py  test_Robot.py  vision.py
client_python/: Kinematic_Robot.py  calibra.py  comunication.py  joy_control.py  new.py  vision.py
client_python/firmware/: CMakeLists.txt
client_python/firmware/components/motor_control/: CMakeLists.txt
client_python/firmware/components/web_server/: CMakeLists.txt  web_server.c  web_server.h
client_python/firmware/main/: main.c
components/motor_control/: motor_control.c  motor_control.h
components/tcp_server/: CMakeLists.txt  tcp_server.c
components/web_server/web/: index.html
components/wifi_ap/: wifi_ap.c  wifi_ap.h
firmware/components/tcp_server/: tcp_server.c
firmware/components/web_server/web/: style.css
firmware/components/wifi_ap/: CMakeLists.txt  wifi_ap.h
firmware_esp32/components/motor_control/: motor_control.c  motor_control.h
firmware_esp32/components/tcp_server/: tcp_server.h
firmware_esp32/components/web_server/: web_server.c
firmware_esp32/components/web_server/web/: index.html
firmware_esp32/main/: main.c
main/: CMakeLists.txt  blink.c  encoder.c  main.c  motor_control.c  motor_control.h  tcp_server.h  web_server.c  web_server.h  wifi_ap.c
main/web/: index.html
